The project is done, fix: button color, spacing in form

--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -8,12 +8,22 @@
   text-align: center;
   box-sizing: border-box;
   border: 1px solid #000;
+  background: var(--gold, #FFEDAB);
 }
 
-.button:active {
-  background: var(--gold, #ffc802);
-}
 
 .button:hover {
   background: var(--gold, #ffc802);
+}
+
+.button:active {
+  background: var(--gold, #FFEDAB);
+}
+
+.button[type='reset'] {
+  background: #fff;
+}
+
+.button[type='reset']:hover {
+  background: gray;
 }
